--- a/town_hall_2/styles/speaker.css
+++ b/town_hall_2/styles/speaker.css
@@ -1,3 +1,7 @@
+@font-face {
+	font-family: TownHall;
+	src: url("HARNGTON.TTF");
+}
 /* the styles for the elements */
 * {
 	margin: 0;
@@ -31,6 +35,8 @@ header {
 	    30deg, #f6bb73 0%, #fffded 30%, white 50%, #fffded 80%, #f6bb73 100%);
 }
 header h2 {
+	font-family: Murach;
+	src: url("HARNGTON.TTF");
 	font-size: 175%;
 	color: #800000;
 }
@@ -157,3 +163,12 @@ footer p {
 	color: white;
 	padding: 1em 0;
 }
+@media print {
+	body {
+		font-family: "Times New Roman", Times, serif;
+		background-color: white;
+		border: none;
+		width: auto;
+	}
+}
+
