--- a/town_hall_2/styles/tickets.css
+++ b/town_hall_2/styles/tickets.css
@@ -47,12 +47,12 @@ header img {
 }
 /* the styles for the form */
 fieldset {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding-top: .5em;
+    /* margin-top: 1em; */
+    margin-bottom: .5em;
+    padding: .5em 1em .5em 1em;
 }
 legend {
-    color: #931420;
+    color: black;
     font-weight: bold;
     font-size: 85%;
     margin-bottom: .5em;
@@ -71,13 +71,14 @@ input, select {
     margin-bottom: .5em;
 }
 input:required, input[required] {
-	border: 3px solid red;
+	border: 2px solid #800000;
 }
 input:valid {
 	border: 1px solid black;
 }
 input:invalid {
 	box-shadow: none;
+	border: 2px solid #800000;
 }
 br {
     clear: both;
@@ -124,7 +125,19 @@ br {
     clear: both;
     display: block;
 }
-
+#paymen label {
+	float: none;
+}
+#paymen input {
+	width: auto;
+	margin-left: 3em;
+}
+#month{
+	width: 7em;
+}
+#year{
+	width: 5em;
+}
 /* the styles for the main content */
 main {
 	clear: left;
